2007-09-26  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/eldoc.el (eldoc-function-argstring-format):
	Deal with the case that special &keywords are at the beginning or
	end of the argument list.  Also add some (incomplete) support for
	non-standard arglists.

2007-09-26  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/eldoc.el (eldoc-message-commands-table-size)
	(eldoc-message-commands, eldoc-current-idle-delay)
	(eldoc-function-argstring-format): Fix typos in docstrings.

2007-09-26  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-units.el (calc-convert-units)
	(calc-convert-temperature): Remove unnecessary colons.

2007-09-26  Bastien Guerry  <bzg@altern.org>

	* org-export-latex.el (org-export-latex-tables-verbatim): New
	function.
	(org-export-latex-remove-from-headlines): Name changed because of
	typo.
	(org-export-latex-quotation-marks-convention): Option removed.
	(org-export-latex-make-preamble): Handle the DATE option.
	(org-export-latex-cleaned-string): Now the only cleaning function,
	synched up with org.el.
	(org-export-latex-lists, org-export-latex-parse-list)
	(org-export-list-to-latex): New functions.

2007-09-26  Carsten Dominik  <dominik@science.uva.nl>

	* org.el (org-kill-is-subtree-p): Use `org-outline-regexp'.
	(org-outline-regexp): New constant.
	(org-remember-handler): Throw error when the target file is not in
	org-mode.
	(org-cleaned-string-for-export): No longer call
	`org-export-latex-cleaned-string' with an argument.
	(org-get-tags): Returns now a list, not a string.
	(org-get-tags-string): New function.
	(org-archive-subtree): No need to split return of `org-get-tags'.
	(org-set-tags, org-entry-properties): Call `org-get-tags-string'
	instead of `org-get-tags'.
	(org-agenda-format-date): Renamed from `org-agenda-date-format'.
	(org-time-from-absolute, org-agenda-format-date-aligned): New
	functions.
	(org-compatible-face): New argument INHERITS.  Inherit from this
	face if possible.