@@ -1,3 +1,8 @@
+2007-09-27  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp.el (tramp-maybe-open-connection): Make test for alive
+	connection more robust.
+
 2007-09-26  Juanma Barranquero  <lekktu@gmail.com>
 
 	* emacs-lisp/eldoc.el (eldoc-function-argstring-format):
